# gradual-from-google-microservice-demo-to-production-ready

deploy/kubernetes/base/: kustomization.yaml
deploy/kubernetes/base/networking/: http-route.yaml  kustomization.yaml
deploy/kubernetes/base/networking/policy/: edgeapi.yaml  kustomization.yaml
deploy/kubernetes/base/services/ad/: deployment.yaml  service.yaml
deploy/kubernetes/base/services/cart/: deployment.yaml  service.yaml
deploy/kubernetes/base/services/checkout/: deployment.yaml  service.yaml
deploy/kubernetes/base/services/currency/: deployment.yaml  service.yaml
deploy/kubernetes/base/services/edgeapi/: configmap.yaml  deployment.yaml  kustomization.yaml  service.yaml  serviceaccount.yaml
deploy/kubernetes/base/services/email/: deployment.yaml  service.yaml
deploy/kubernetes/base/services/frontend/: deployment.yaml  service.yaml
deploy/kubernetes/base/services/loadgenerator/: deployment.yaml
deploy/kubernetes/base/services/payment/: deployment.yaml  service.yaml
deploy/kubernetes/overlays/dev/: kustomization.yaml  namespace.yaml
deploy/kubernetes/overlays/prod/: http-route.yaml  kustomization.yaml  namespace.yaml  pdb.yaml
src/edgeapi/: Cargo.toml  build.rs
src/edgeapi/config/: app-prod.toml  app.toml
src/edgeapi/proto/: edge.proto
src/edgeapi/src/: config.rs  error.rs  main.rs
src/edgeapi/src/clients/: mod.rs
src/edgeapi/src/dtos/: cartDto.rs  mod.rs  productDto.rs
src/edgeapi/src/grpc/: edge_service.rs  mod.rs
src/edgeapi/src/routes/: cartRoute.rs  checkoutRoute.rs  healthRoute.rs  mod.rs  productRoute.rs
(+20 files in other folders)
