[package]

name = "edgeapi"
version = "0.1.0"
edition = "2024"

[dependencies]

summer = "0.7.1"
summer-web = "0.7.2"
# summer-boot = "1.4.2"
summer-grpc = "0.7.1"
summer-macros = "0.7.1"

tokio = { version = "1.52.3", features = ["full"] }

tonic = "0.14.6"
prost = "0.14.3"
tower = "0.5.3"
tower-http = { version = "0.6.11", features = ["trace", "timeout", "cors", "compression-gzip"]}

serde = { version = "1.0.228", features = ["derive"]}
serde_json = "1.0.150"

thiserror = "2.0.18"
anyhow = "1.0.102"

tracing = "0.1.44"
uuid = "1.23.2"

[build-dependencies]

tonic-build = "0.14.6"
